--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@conform-to/react": "^1.1.5",
@@ -20,6 +21,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
+    "@stripe/stripe-js": "^4.3.0",
     "@uploadthing/react": "^6.7.2",
     "@upstash/redis": "^1.33.0",
     "class-variance-authority": "^0.7.0",
@@ -29,6 +31,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.12.7",
+    "stripe": "^16.8.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
