--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
     "@conform-to/react": "^1.1.5",
     "@conform-to/zod": "^1.1.5",
     "@kinde-oss/kinde-auth-nextjs": "^2.3.6",
@@ -21,6 +20,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.0",
@@ -33,6 +33,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.7",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "react": "^18",
@@ -45,8 +46,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.195",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
