--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "embla-carousel-react": "^8.1.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.408.0",
+    "micro": "^10.0.1",
     "next": "14.2.5",
+    "razorpay": "^2.9.4",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.12.7",
